testsuite/tests/parser/should_fail/RecordWildCardsFail.hs

module RecordWildCardsFail where

data Foo = Foo { a :: Int }

foo :: Foo -> Int
foo Foo{..} = a
