testsuite/tests/parser/should_fail/RecordWildCardsFail.stderr

RecordWildCardsFail.hs:7:5: error: [GHC-37132]
    Illegal `..' in record pattern
    Suggested fix:
      Perhaps you intended to use the ‘RecordWildCards’ extension
